INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/platforms/reference)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/platforms/reference)

ADD_EXECUTABLE(test_ANN_package test_ANN_package.cpp)

FOREACH(mylibrary OpenMM ANN ANN_CUDA ANNReference)
    TARGET_LINK_LIBRARIES(test_ANN_package ${mylibrary})
ENDFOREACH(mylibrary)

ADD_TEST(test_ANN_package test_ANN_package)
